webpagetest-server Updated persistance comment in values.yaml

--- a/incubator/webpagetest-server/values.yaml
+++ b/incubator/webpagetest-server/values.yaml
@@ -50,7 +50,8 @@ agentIngress:
 ##
 persistence:
   enabled: true
-  ## wordpress data Persistent Volume Storage Class
+  ## Used to store test reports.
+  ## Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
   ## If undefined (the default) or set to null, no storageClassName spec is
