--- a/stable/cluster-autoscaler/values.yaml
+++ b/stable/cluster-autoscaler/values.yaml
@@ -10,7 +10,7 @@ awsRegion: us-east-1
 cloudProvider: aws
 
 image:
-  repository: gcr.io/google_containers/cluster-autoscaler
+  repository: k8s.gcr.io/cluster-autoscaler
   tag: v1.0.3
   pullPolicy: IfNotPresent
 
