--- a/stable/heapster/values.yaml
+++ b/stable/heapster/values.yaml
@@ -2,7 +2,7 @@
 ##
 replicaCount: 1
 image:
-  repository: gcr.io/google_containers/heapster
+  repository: k8s.gcr.io/heapster
   tag: v1.3.0
   pullPolicy: IfNotPresent
 ## Here labels can be added to the heapster deployment
@@ -58,7 +58,7 @@ env: []
 resizer:
   enabled: true
   image:
-    repository: gcr.io/google_containers/addon-resizer
+    repository: k8s.gcr.io/addon-resizer
     tag: 1.7
     pullPolicy: IfNotPresent
   resources:
