--- a/stable/kubernetes-dashboard/values.yaml
+++ b/stable/kubernetes-dashboard/values.yaml
@@ -3,7 +3,7 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
-image: gcr.io/google_containers/kubernetes-dashboard-amd64
+image: k8s.gcr.io/kubernetes-dashboard-amd64
 imageTag: "v1.7.1"
 imagePullPolicy: "IfNotPresent"
 
