--- a/stable/mongodb-replicaset/values.yaml
+++ b/stable/mongodb-replicaset/values.yaml
@@ -12,7 +12,7 @@ auth:
 
 # Specs for the Docker image for the init container that establishes the replica set
 installImage:
-  name: gcr.io/google_containers/mongodb-install
+  name: k8s.gcr.io/mongodb-install
   tag: 0.5
   pullPolicy: IfNotPresent
 
