--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -190,7 +190,7 @@ kubeStateMetrics:
   ## kube-state-metrics container image
   ##
   image:
-    repository: gcr.io/google_containers/kube-state-metrics
+    repository: k8s.gcr.io/kube-state-metrics
     tag: v1.1.0-rc.0
     pullPolicy: IfNotPresent
 
