--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -5,7 +5,7 @@
 
 Master:
   Name: master
-  Image: "gcr.io/google_containers/spark"
+  Image: "k8s.gcr.io/spark"
   ImageTag: "1.5.1_v3"
   Replicas: 1
   Component: "spark-master"
@@ -23,7 +23,7 @@ WebUi:
 
 Worker:
   Name: worker
-  Image: "gcr.io/google_containers/spark"
+  Image: "k8s.gcr.io/spark"
   ImageTag: "1.5.1_v3"
   Replicas: 3
   Component: "spark-worker"
@@ -37,7 +37,7 @@ Worker:
 
 Zeppelin:
   Name: zeppelin
-  Image: "gcr.io/google_containers/zeppelin"
+  Image: "k8s.gcr.io/zeppelin"
   ImageTag: "v0.5.5_v2"
   Replicas: 1
   Component: "zeppelin"
