etcd-operator: add Alejandro Escobar as maintainer

--- a/stable/etcd-operator/Chart.yaml
+++ b/stable/etcd-operator/Chart.yaml
@@ -12,3 +12,5 @@ maintainers:
   email: chance.zibolski@coreos.com
 - name: lachie83
   email: lachlan@deis.com
+- name: alejandroEsc
+  email: jaescobar.cell@gmail.com
