--- a/incubator/drone/Chart.yaml
+++ b/incubator/drone/Chart.yaml
@@ -1,8 +1,8 @@
 name: drone
 home: https://drone.io/
-version: 0.1.0
-appVersion: 0.8.1
-description: Drone CI
+version: 0.1.1
+appVersion: 0.8.2
+description: Drone is a Continuous Delivery system built on container technology
 keywords:
 - continuous-delivery
 - continuous-deployment
