--- a/incubator/drone/templates/deployment-agent.yaml
+++ b/incubator/drone/templates/deployment-agent.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: {{ template "drone.fullname" . }}-agent
-        image: "{{ .Values.agentImage.repository }}:{{ .Values.agentImage.tag }}"
-        imagePullPolicy: {{ .Values.agentImage.pullPolicy }}
+        image: "{{ .Values.images.agent.repository }}:{{ .Values.images.agent.tag }}"
+        imagePullPolicy: {{ .Values.images.agent.pullPolicy }}
         env:
           - name: DRONE_SERVER
             value: {{ template "drone.fullname" . }}:9000
@@ -38,7 +38,8 @@ spec:
         resources:
 {{ toYaml .Values.agent.resources | indent 10 }}
       - name: {{ template "drone.fullname" . }}-dind
-        image: docker:17.05.0-ce-dind
+        image: "{{ .Values.images.dind.repository }}:{{ .Values.images.dind.tag }}"
+        imagePullPolicy: {{ .Values.images.dind.pullPolicy }}
         env:
         - name: DOCKER_DRIVER
           value: overlay
