--- a/incubator/drone/templates/deployment-server.yaml
+++ b/incubator/drone/templates/deployment-server.yaml
@@ -51,4 +51,15 @@ spec:
             port: http
         resources:
 {{ toYaml .Values.server.resources | indent 10 }}
+        volumeMounts:
+          - name: data
+            mountPath: /var/lib/drone
+      volumes:
+      - name: data
+      {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ .Values.persistence.existingClaim | default (include "drone.fullname" .) }}
+      {{- else }}
+        emptyDir: {}
+      {{- end -}}
 {{ end }}
