Added icon to the chart

--- a/incubator/drone/Chart.yaml
+++ b/incubator/drone/Chart.yaml
@@ -1,5 +1,6 @@
 name: drone
 home: https://drone.io/
+icon: http://docs.drone.io/logo.svg
 version: 0.1.1
 appVersion: 0.8.2
 description: Drone is a Continuous Delivery system built on container technology
