--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -2,7 +2,7 @@
 image: traefik
 imageTag: 1.4.5
 ## can switch the deploy type to Deployment if you prefer
-deployType: Daemonset
+deployType: Deployment
 ## can switch the service type to NodePort if required
 serviceType: LoadBalancer
 loadBalancerIP:
