--- a/stable/pachyderm/Chart.yaml
+++ b/stable/pachyderm/Chart.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 description: >
   Pachyderm is a large-scale container-based workflow engine that offers complete version control for data and reproducible data processing
 name: pachyderm
+icon: https://avatars2.githubusercontent.com/u/10432478?s=200
 keywords:
   - pachyderm
   - workflows
@@ -10,6 +11,7 @@ keywords:
   - distributed
   - processing
 version: 0.1.0
+appVersion: 1.6.6
 home: "https://pachyderm.io"
 sources:
   - "https://github.com/pachyderm/pachyderm"
