[incubator/elasticsearch] client svc Annotations
This adds functionality to annotate the client Service, which enables
the setting of ACM certifcates, subnets, and hostnames for a
LoadBalancer type service for instance.

--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -21,6 +21,11 @@ client:
   name: client
   replicas: 2
   serviceType: ClusterIP
+
+## (dict) If specified, apply these annotations to the client service
+#  serviceAnnotations:
+#    example: client-svc-foo
+
   heapSize: "512m"
   antiAffinity: "soft"
   resources:
