--- a/incubator/mssql-linux/Chart.yaml
+++ b/incubator/mssql-linux/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-description: SQL Server 2017 Linux Helm Chart for Kubernetes
+description: SQL Server 2017 Linux Helm Chart
 name: mssql-linux
-version: 0.1.4
+version: 0.1.5
 icon: https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1I4Dx
 maintainers:
 - name: thomasliddledba
