--- a/incubator/mssql-linux/templates/secret.yaml
+++ b/incubator/mssql-linux/templates/secret.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "mssql.fullname" . }}-secret
-# type: Opaque
+  labels:
+    app: {{ template "mssql.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+type: Opaque
 data:
-  password: TXlTYVBhc3N3b3JkMTIz
+  password: {{ randAlphaNum 15 | b64enc | quote }}
