--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -22,11 +22,6 @@ controller:
   ##
   defaultBackendService: ""
 
-  ## Optionally specify the secret name for default SSL certificate
-  ## Must be <namespace>/<secret_name>
-  ##
-  defaultSSLCertificate: ""
-
   ## Election ID to use for status update
   ##
   electionID: ingress-controller-leader
@@ -54,6 +49,10 @@ controller:
     enabled: false
     namespace: ""   # defaults to .Release.Namespace
 
+  ## Additional command line arguments to pass to nginx-ingress-controller
+  ## E.g. to specify the default SSL certificate you can use
+  ## extraArgs:
+  ##   default-ssl-certificate: "<namespace>/<secret_name>"
   extraArgs: {}
 
   ## Additional environment variables to set
