--- a/incubator/webpagetest-agent/templates/deployment.yaml
+++ b/incubator/webpagetest-agent/templates/deployment.yaml
@@ -9,6 +9,9 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app: {{ template "webpagetest.name" . }}
   template:
     metadata:
       labels:
