--- a/incubator/webpagetest-server/templates/secrets-user-details.yaml
+++ b/incubator/webpagetest-server/templates/secrets-user-details.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.ec2Locations.enabled }}
+{{- if not .Values.ec2Locations.customUserDataSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -34,4 +35,5 @@ data:
 {{- end }}
 
 
+{{- end }}
 {{- end }}
