--- a/stable/magento/templates/externaldb-secrets.yaml
+++ b/stable/magento/templates/externaldb-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "externaldb"  }}
+  name: {{ template "magento.fullname" . }}-externaldb
   labels:
     app: {{ template "magento.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
