--- a/incubator/cassandra/templates/cassandra-statefulset.yaml
+++ b/incubator/cassandra/templates/cassandra-statefulset.yaml
@@ -26,6 +26,11 @@ spec:
   - name: thrift
     port: {{ default 9160 .Values.config.ports.thrift }}
     targetPort: {{ default 9160 .Values.config.ports.thrift }}
+  {{- if .Values.config.ports.agent }}
+  - name: agent
+    port: {{ .Values.config.ports.agent }}
+    targetPort: {{ .Values.config.ports.agent }}
+  {{- end }}
   selector:
     app: {{ template "cassandra.fullname" . }}
 ---
@@ -41,6 +46,8 @@ metadata:
 spec:
   serviceName: {{ template "cassandra.fullname" . }}
   replicas: {{ .Values.config.cluster_size }}
+  updateStrategy:
+    type: {{ .Values.updateStrategy.type }}
   template:
     metadata:
       labels:
@@ -102,6 +109,10 @@ spec:
           containerPort: {{ default 9042 .Values.config.ports.cql }}
         - name: thrift
           containerPort: {{ default 9160 .Values.config.ports.thrift }}
+        {{- if .Values.config.ports.agent }}
+        - name: agent
+          containerPort: {{ .Values.config.ports.agent }}
+        {{- end }}
         volumeMounts:
         - name: data
           mountPath: /var/lib/cassandra
