--- a/incubator/cassandra/values.yaml
+++ b/incubator/cassandra/values.yaml
@@ -59,6 +59,8 @@ config:
   ports:
     cql: 9042
     thrift: 9160
+    # If a JVM Agent is in place
+    # agent: 61621
 
 ## Configure node selector. Edit code below for adding selector to pods
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
@@ -69,3 +71,6 @@ config:
 ## Additional pod labels
 ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
+
+updateStrategy:
+  type: OnDelete
