--- a/stable/phabricator/templates/ingress.yaml
+++ b/stable/phabricator/templates/ingress.yaml
@@ -1,6 +1,5 @@
 {{- if .Values.ingress.enabled -}}
 {{- $serviceName := include "phabricator.fullname" . -}}
-{{- $servicePort := .Values.service.externalPort -}}
 {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -24,7 +23,7 @@ spec:
           - path: {{ $ingressPath }}
             backend:
               serviceName: {{ $serviceName }}
-              servicePort: {{ $servicePort }}
+              servicePort: 80
     {{- end -}}
   {{- if .Values.ingress.tls }}
   tls:
