--- a/incubator/elasticsearch-exporter/values.yaml
+++ b/incubator/elasticsearch-exporter/values.yaml
@@ -11,13 +11,13 @@ image:
   tag: 1.0.2
   pullPolicy: IfNotPresent
 
-resources:
-  requests:
-    cpu: 100m
-    memory: 128Mi
-  limits:
-    cpu: 100m
-    memory: 128Mi
+resources: {}
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
 
 service:
   type: ClusterIP
