--- a/stable/kube-lego/Chart.yaml
+++ b/stable/kube-lego/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-description: Automatically requests certificates from Let's Encrypt
+description: DEPRECATED Automatically requests certificates from Let's Encrypt
 name: kube-lego
 version: 0.4.0
 # The kube-lego chart is deprecated and no longer maintained.
