--- a/stable/kubernetes-dashboard/templates/deployment.yaml
+++ b/stable/kubernetes-dashboard/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ template "kubernetes-dashboard.fullname" . }}
   labels:
-    app: {{ template "kubernetes-dashboard.fullname" . }}
+    app: {{ template "kubernetes-dashboard.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -21,10 +21,8 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "kubernetes-dashboard.fullname" . }}
-        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-        heritage: "{{ .Release.Service }}"
-        release: "{{ .Release.Name }}"
+        app: {{ template "kubernetes-dashboard.name" . }}
+        release: {{ .Release.Name }}
         kubernetes.io/cluster-service: "true"
     spec:
       serviceAccountName: {{ if .Values.rbac.create }}{{ template "kubernetes-dashboard.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
