The password values in values.yaml should be provided as base64

--- a/stable/mysql/templates/secrets.yaml
+++ b/stable/mysql/templates/secrets.yaml
@@ -10,12 +10,12 @@ metadata:
 type: Opaque
 data:
   {{ if .Values.mysqlRootPassword }}
-  mysql-root-password:  {{ .Values.mysqlRootPassword | b64enc | quote }}
+  mysql-root-password:  {{ .Values.mysqlRootPassword | quote }}
   {{ else }}
   mysql-root-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
   {{ if .Values.mysqlPassword }}
-  mysql-password:  {{ .Values.mysqlPassword | b64enc | quote }}
+  mysql-password:  {{ .Values.mysqlPassword | quote }}
   {{ else }}
   mysql-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
