--- a/stable/redis/templates/svc.yaml
+++ b/stable/redis/templates/svc.yaml
@@ -24,6 +24,9 @@ spec:
   - name: redis
     port: 6379
     targetPort: redis
+  {{- if .Values.nodePort.enabled }}
+    nodePort: {{ .Values.nodePort.port }}
+  {{- end }}
   {{- if .Values.metrics.enabled }}
   - name: metrics
     port: 9121
