--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -11,7 +11,8 @@ imagePullPolicy: IfNotPresent
 ## Kubernetes service type
 serviceType: ClusterIP
 
-## If service is nodeport pass port
+## If serviceType is NodePort and nodePort.enabled = true
+## than user can pass param nodePort.port = <port>
 nodePort
   enabled: false
 
