--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -12,7 +12,7 @@ imagePullPolicy: IfNotPresent
 serviceType: ClusterIP
 
 ## If serviceType is NodePort and nodePort.enabled = true
-## than user can pass param nodePort.port = <port>
+## than User can pass param nodePort.port = <port>
 nodePort:
   enabled: false
 
