Update according to new RBAC best practices

--- a/stable/rethinkdb/templates/auth/clusterrolebinding.yaml
+++ b/stable/rethinkdb/templates/auth/clusterrolebinding.yaml
@@ -9,6 +9,6 @@ roleRef:
   name: {{ template "rethinkdb.fullname" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "rethinkdb.fullname" . }}
+    name: {{ template "rethinkdb.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 {{- end -}}
