--- a/stable/rethinkdb/templates/auth/serviceaccount.yaml
+++ b/stable/rethinkdb/templates/auth/serviceaccount.yaml
@@ -1,6 +1,11 @@
-{{- if .Values.rbac.create -}}
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "rethinkdb.fullname" . }}
+  name: {{ template "rethinkdb.serviceAccountName" . }}
+  labels:
+    app: {{ template "rethinkdb.name" . }}
+    chart: {{ template "rethinkdb.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 {{- end -}}
