--- a/stable/rethinkdb/values.yaml
+++ b/stable/rethinkdb/values.yaml
@@ -75,5 +75,12 @@ ports:
 rethinkdbPassword: rethinkdb
 
 rbac:
-  create: false
-  serviceAccountName: default
+  # Specifies whether RBAC resources should be created
+  create: true
+
+serviceAccount:
+  # Specifies whether a ServiceAccount should be created
+  create: true
+  # The name of the ServiceAccount to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name:
