--- a/stable/rethinkdb/templates/auth/clusterrole.yaml
+++ b/stable/rethinkdb/templates/auth/clusterrole.yaml
@@ -3,6 +3,11 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: {{ template "rethinkdb.fullname" . }}
+  labels:
+    app: {{ template "rethinkdb.name" . }}
+    chart: {{ template "rethinkdb.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
